--- a/app/views/landing_pages/amfam.html.slim
+++ b/app/views/landing_pages/amfam.html.slim
@@ -62,4 +62,4 @@
         = render :partial => '/landing_pages/products_four', :locals => { :products => products }
         
     .row.relative.more-products
-      = link_to 'More Dresses', '/dresses', class: 'btn btn-black'
+      = link_to 'More Dresses', dresses_path, class: 'btn btn-black'
