--- a/style_quiz/app/views/style_quiz/questions/color_dresses.html.slim
+++ b/style_quiz/app/views/style_quiz/questions/color_dresses.html.slim
@@ -1,7 +1,7 @@
 / Question 3/11
 .quiz-section id="#{ question.name }-question"
   .quiz-section-title.quiz-section-title-peach
-    h4.quiz-section-number Question 3/11
+    h4.quiz-section-number Question #{ question_position }/#{ question_total }
     h2 
       | What colour dresses do you
       br
@@ -98,6 +98,9 @@
         .quiz-catalog-title
           | mauve
           .checkmark
+
+    .row
+      .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
+      .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
 / @end Question 3/11
 / ------------------
-
