--- a/style_quiz/app/views/style_quiz/questions/events_form.html.slim
+++ b/style_quiz/app/views/style_quiz/questions/events_form.html.slim
@@ -1,7 +1,7 @@
 / Question 10/11
 .quiz-section id="#{ question.name }-question"
   .quiz-section-title.quiz-section-title-pink
-    h4.quiz-section-number Question 10/11
+    h4.quiz-section-number Question #{ question_position }/#{ question_total }
     h2 
       | Tell us about your upcoming events
       br
@@ -10,39 +10,32 @@
     .row
       .col-2
         label event name
-        input.form-control type="text"
+        input.form-control type="text" name='name'
       .col-2
         label event type
-        input.form-control type="text"
+        input.form-control type="text" name='type'
       .col-2
         label event date
-        input.form-control type="text"
+        input.form-control type="text" name='date'
       .col-2
         label &nbsp;
-        = link_to 'Add', '#', class: 'btn btn-primary btn-block'
+        = link_to 'Add', '#', class: 'btn btn-primary btn-block', data: { action: 'add-event' }
       .col-4
-        .row
+        /.row
           .col-2.text-center
             .btn.btn-text or
           .col-10
             = link_to 'import from facebook', '#', class: 'btn btn-facebook btn-block'
     
-    .row
-      .col-4
-        .event-tag
-          span 11/11/15 - high school formal
-          .icon-cross
-      .col-4
-        .event-tag
-          span 11/11/15 - red cross event dinner
-          .icon-cross
-      .col-4
-        .event-tag
-          span 11/11/15 - christmas party
-          .icon-cross
+    .row.events-list
+      = question.values.each do |event|
+        .col-4
+          .event-tag
+            span = "#{ event.date.to_s(:db) } - #{ event.name }"
+            .icon-cross data-action='delete-event'
 
     .row
-      .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block'
-      .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block'
+      .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
+      .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
 / @end Question 10/11
 / ------------------
