--- a/style_quiz/app/views/style_quiz/questions/fashion_importance.html.slim
+++ b/style_quiz/app/views/style_quiz/questions/fashion_importance.html.slim
@@ -1,11 +1,7 @@
-coffee:
-  $('.rank-cell').on 'click', ->
-    $(this).addClass('active').siblings().removeClass('active')
-
 / Question 8/11
 .quiz-section id="#{ question.name }-question"
   .quiz-section-title.quiz-section-title-grey
-    h4.quiz-section-number Question 8/11
+    h4.quiz-section-number Question #{ question_position }/#{ question_total }
     h2 How important is fashion to you?
     h4.font-family-secondary.text-uppercase - CLICK ON THE SCALE, FROM LEAST IMPORTANT TO VERY IMPORTANT
   .grid-container
@@ -31,7 +27,7 @@ coffee:
       .rank-cell
         .rank-item.rank-fasion-item-0
     .row
-      .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block'
-      .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block'
+      .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
+      .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
 / @end Question 8/11
 / ------------------
