markup popup with timer

--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -30,6 +30,17 @@
   }
 }
 
+// Bottom  
+.vex-dialog-bottom {
+  .vex-content {
+    vertical-align: bottom;
+    margin-bottom: 50px;
+  }
+}
+// @end Bottom 
+// -----------------
+
+
 // - colors
 .vex-dialog-pink .vex-content {
   background-color: $pink-bg;
