--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -66,3 +66,11 @@
           / span class='st_twitter_custom' st_via="fameandpartners" displayText='Tweet'
           = link_to configatron.links.twitter, target: :blank, class: 'twitter' do
             = image_tag '_icons/twitter.png'
+
+
+coffee:
+  $ ->
+    vex.open({
+      content: '<div class="h1">48h only! Save 15% off your killer prom dress</div><div class="h1 timer-box"><span class="hh">hh</span><span class="mm">mm</span><span class="ss">ss</span></div>',
+      className: 'vex-dialog-default vex-dialog-bottom vex-dialog-pink'
+    })
