[bugfix] use routes helpers to replace hardcoded URLs on the FAQs

--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -21,7 +21,7 @@
 
       p
         |With our express making we offer our customers the opportunity to have their dress made in 48 hours / 2 business days at the additional charge of $29. This is limited to certain styles and colours which can be viewed on the website here &nbsp;
-        a href="www.fameandpartners.com/au/getitquick" www.fameandpartners.com/au/getitquick
+        = link_to fast_making_dresses_url, fast_making_dresses_path
 
 
       h3 How can I track my order?
