[fix][admin] defensive views

--- a/app/views/spree/admin/orders/show.html.erb
+++ b/app/views/spree/admin/orders/show.html.erb
@@ -17,7 +17,7 @@
     <legend align="center">Details</legend>
     <div class="align-center">
       <p><strong>Email:</strong> <%= @order.email %></p>
-      <p><strong>Phone:</strong> <%= @order.billing_address.phone %></p>
+      <p><strong>Phone:</strong> <%= @order.billing_address.try(:phone) %></p>
     </div>
   </fieldset>
   <% if @order.bill_address %>
