--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -139,23 +139,25 @@ ruby:
                         li.mega-menu-list--item= link_to "Pastel", colour_path('Pastel'), title: "Pastel"
 
                     .col-md-3.col-lg-2
-                      - if Features.active?(:sales) || Features.active?(:express_making)
+                      - if Features.active?(:express_making)
                         h4.link-header Express Making
                         ul.mega-menu-list
-                          - if Features.active?(:express_making)
-                            li.mega-menu-list--item= link_to 'Dresses made in 48 hours', fast_making_dresses_path, title: 'Express Making'
-                          - if Features.active?(:sales)
-                            - if !sale_active?
-                              li.mega-menu-list--item= link_to 'Sale - Up to 80% Off', sale_path, title: 'Dresses On Sale'
-                            - else
-                              li.mega-menu-list--item= link_to "All on Sale", dresses_on_sale_path(:sale => 'all'), title: 'All Dresses on Sale'
-                              li.mega-menu-list--item= link_to "20 Percent Off", dresses_path(sale: 20), title: 'All Dresses 20% off'
-                              li.mega-menu-list--item= link_to "25 Percent Off", dresses_path(sale: 25), title: 'All Dresses 25% off'
-                              li.mega-menu-list--item= link_to "30 Percent Off", dresses_path(sale: 30), title: 'All Dresses 30% off'
-                              li.mega-menu-list--item= link_to "40 Percent Off", dresses_path(sale: 40), title: 'All Dresses 40% off'
-                              li.mega-menu-list--item= link_to "50 Percent Off", dresses_path(sale: 50), title: 'All Dresses 50% off'
-                              li.mega-menu-list--item= link_to "50 Percent Off", dresses_path(sale: 60), title: 'All Dresses 60% off'
-                              li.mega-menu-list--item= link_to "80 Percent Off", dresses_path(sale: 80), title: 'All Dresses 80% off'
+                          li.mega-menu-list--item= link_to 'Dresses made in 48 hours', fast_making_dresses_path, title: 'Express Making'
+
+                      - if Features.active?(:sales)
+                        h4.link-header Sales
+                        ul.mega-menu-list
+                          - if !sale_active?
+                            li.mega-menu-list--item= link_to 'Sale - Up to 80% Off', sale_path, title: 'Dresses On Sale'
+                          - else
+                            li.mega-menu-list--item= link_to "All on Sale", dresses_on_sale_path(:sale => 'all'), title: 'All Dresses on Sale'
+                            li.mega-menu-list--item= link_to "20 Percent Off", dresses_path(sale: 20), title: 'All Dresses 20% off'
+                            li.mega-menu-list--item= link_to "25 Percent Off", dresses_path(sale: 25), title: 'All Dresses 25% off'
+                            li.mega-menu-list--item= link_to "30 Percent Off", dresses_path(sale: 30), title: 'All Dresses 30% off'
+                            li.mega-menu-list--item= link_to "40 Percent Off", dresses_path(sale: 40), title: 'All Dresses 40% off'
+                            li.mega-menu-list--item= link_to "50 Percent Off", dresses_path(sale: 50), title: 'All Dresses 50% off'
+                            li.mega-menu-list--item= link_to "50 Percent Off", dresses_path(sale: 60), title: 'All Dresses 60% off'
+                            li.mega-menu-list--item= link_to "80 Percent Off", dresses_path(sale: 80), title: 'All Dresses 80% off'
 
           - if Features.active?(:style_quiz)
             li.menu-item
