--- a/app/views/products/details/_side_panel_making_options.html.slim
+++ b/app/views/products/details/_side_panel_making_options.html.slim
@@ -12,13 +12,11 @@
       .production-time-box
         h2 = option.name
         p
-          ' We make your dress in 48h
-          br
-          ' for as little as $29 express making fee
+          ' Get your dress made within 48h
         a.btn.btn-block.btn-secondary.making-option href="#" data-id=option.id data-name=option.name data-price=option.display_price
           = "+#{ option.display_price }"
     .production-time-box
       h2 Standard
-      p Your dress is made within 2-5 business days
+      p Get your dress made in 2-5 business days
       a.btn.btn-block.btn-secondary.making-option data-id="original" data-name="original" data-price=""
         | +$0
