[feat][admin] payments report, admin page and rake task

--- a/app/views/spree/admin/orders/_sub_menu.html.slim
+++ b/app/views/spree/admin/orders/_sub_menu.html.slim
@@ -2,4 +2,5 @@
   ul id="sub_nav" data-hook="admin_orders_sub_tabs" class="inline-menu"
     = tab :orders
     = tab :bulk_order_updates, url: admin_bulk_order_updates_path
+    = tab :payments_report, url: admin_payments_report_path
 
