made mega-menu-banner responsive

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -58,13 +58,13 @@
 }
 
 .mega-menu-banner {
-	position: absolute;
-	left: 17px;
-	top: 130px;
-	width: 410px;
-	height: 270px;
-	display: block;
-	color: #fff;
+  position: absolute;
+  left: 17px;
+  top: 130px;
+  height: 270px;
+  width: (100% / 3);
+  display: block;
+  color: #fff;
 }
 
 .stories {
