--- a/app/assets/stylesheets/redesign/extras/_helpers.css.scss
+++ b/app/assets/stylesheets/redesign/extras/_helpers.css.scss
@@ -9,3 +9,56 @@
     filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='1');
   }
 }
+
+// Rhombus
+.rhombus {
+  text-align: center;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  position: relative;
+  display: inline-block;
+  
+  &:before {
+    content: '';
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    margin: -35% 0 0 -35%;
+    left: 50%;
+    top: 50%;
+    background-color: #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg); 
+  }
+
+  &.rhombus-empty:before {
+    background: none;
+    border: solid 1px #fff;
+  }
+
+
+  .rhombus-text-holder {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    &:before {
+      content: '';
+      width: 1px;
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: -4px;
+      height: 100%;
+    }
+  }
+
+  .rhombus-text {
+    vertical-align: middle;
+    display: inline-block;
+  }
+} 
+// @end Rhombus
+// -----------------
