[tweak] async sharethis JS and remove comments on footer buttons # Conflicts: #	app/views/layouts/redesign/_javascript.html.erb

--- a/app/views/layouts/redesign/_javascript.html.erb
+++ b/app/views/layouts/redesign/_javascript.html.erb
@@ -1,7 +1,7 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/js/select2.min.js"></script>
 <script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
+<script async type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "0babd5ea-dd86-4553-b8f6-ab4a6126df47", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 
 
