--- a/app/views/widgets/site_navigations/main_nav.html.slim
+++ b/app/views/widgets/site_navigations/main_nav.html.slim
@@ -5,9 +5,9 @@ doctype html
 
     - if !Rails.env.production?
       meta name="robots" content="noindex, nofollow"
-      script src="//use.typekit.net/kur6crm.js" type="text/javascript"
+      = render :partial => 'shared/typekit', locals: { kit_id: 'kur6crm' }
     - else
-      script src="//use.typekit.net/day0prb.js" type="text/javascript"
+      = render :partial => 'shared/typekit', locals: { kit_id: 'day0prb' }
 
     script type="text/javascript"
       | try{Typekit.load();}catch(e){}
