--- a/app/views/layouts/redesign/maintenance.html.slim
+++ b/app/views/layouts/redesign/maintenance.html.slim
@@ -10,7 +10,7 @@ doctype html
     = csrf_meta_tags
 
     = render 'layouts/redesign/head'
-    script src="//use.typekit.net/day0prb.js" type="text/javascript"
+    = render :partial => 'shared/typekit', locals: { kit_id: 'day0prb' }
 
   body#top.maintenance-page
     = yield
