--- a/app/views/spree/order_mailer/production_order_email.html.slim
+++ b/app/views/spree/order_mailer/production_order_email.html.slim
@@ -17,7 +17,10 @@ table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="
                 tr
                   th Items:
                   td = order.total_items
-
+                tr
+                  th Promotion:
+                  td = order.promo_codes.join(', ')
+                            
             table border="0" cellpadding="5" cellspacing="0" width="100%" id="lineItems"
               - order.line_items.each do |item|
                 tbody
@@ -53,6 +56,7 @@ table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="
                     tr
                       th Making Options
                       td = item.making_options.map{|option| option.name.upcase }.join(', ')
+
                   tr
                     th Customizations:
                     td
