--- a/app/views/spree/order_mailer/team_confirm_email.text.erb
+++ b/app/views/spree/order_mailer/team_confirm_email.text.erb
@@ -7,8 +7,12 @@
 ============================================================
 <%= t('order_mailer.confirm_email.subtotal', :subtotal => @order.display_item_total) %>
 
+<% if @order_presenter.promotion? %>
+PROMOTION: <%= @order_presenter.promo_codes.join(', ') %>
+<% end %>
+
 <% @order.adjustments.eligible.each do |adjustment| %>
-  <%= raw(adjustment.label) %> <%= adjustment.display_amount %>
+<%= raw(adjustment.label) %> <%= adjustment.display_amount %>
 <% end %>
 
 <%= t('order_mailer.confirm_email.total', :total => @order.display_total) %>
@@ -22,7 +26,6 @@
       state: <%= info.state %>
   <% end %>
 <% end %>
-
 
 <% if @order.billing_address.phone.present? %>
 Phone Number: <%= @order.billing_address.phone %>
