--- a/app/views/spree/admin/products/index.html.erb
+++ b/app/views/spree/admin/products/index.html.erb
@@ -30,38 +30,54 @@
         <%- locals = {:f => f} %>
 
         <div data-hook="admin_products_index_search">
-          <div class="alpha four columns">
+          <div class="alpha five columns">
             <div class="field">
               <%= f.label :name_cont, t(:name) %>
               <%= f.text_field :name_cont, :size => 15 %>
             </div>  
-          </div>
-          <div class="four columns">
+
             <div class="field">
               <%= f.label :variants_including_master_sku_cont, t(:sku) %>
               <%= f.text_field :variants_including_master_sku_cont, :size => 15 %>
             </div>
           </div>
 
-          <div class="four columns">
-            <div class="field">
-              <%= f.label :size_chart_eq, t(:size_chart) %>
-              <%= f.select :size_chart_eq, SizeChart::CHARTS.keys, {:include_blank => true} %>
-            </div>
-
+          <div class="five columns">
             <div class="field">
               <%= f.label :fabric_card, t(:fabric_card) %>
-              <%= f.select :fabric_card_id_eq, options_from_collection_for_select(FabricCard.all, :id, :name, params[:q][:fabric_card_id_eq]), {:include_blank => true}%>
+              <%= f.select :fabric_card_id_eq, options_from_collection_for_select(FabricCard.all, :id, :name, params[:q][:fabric_card_id_eq]), {:include_blank => true} %>
+            </div>
+            <div class="field checkbox">
+              <%= render partial: 'search_null_column', locals: { f: f, column_name: :fabric_card_id } %>
             </div>
           </div>
 
-          <div class="omega four columns">
+
+          <div class="three columns">
+            <div class="field">
+              <%= f.label :factory_id, t(:factory) %><br>
+              <%= f.select :factory_id_eq, options_from_collection_for_select(Factory.all, :id, :name, params[:q][:factory_id_eq]), {:include_blank => true} %>
+
+            </div>
+            <div class="field checkbox">
+              <%= render partial: 'search_null_column', locals: {f: f, column_name: :factory_id} %>
+            </div>
+          </div>
+
+
+          <div class="omega three columns">
+            <div class="field select">
+              <%= f.label :size_chart_eq, t(:size_chart) %><br>
+              <%= f.select :size_chart_eq, SizeChart::CHARTS.keys, {:include_blank => true} %>
+            </div>
+
             <div class="field checkbox">
               <label>
                 <%= f.check_box :deleted_at_null, {:checked => params[:q][:deleted_at_null].blank?}, '', '1' %>
                 <%= t(:show_deleted) %>  
               </label>
-            </div>
+              </div>
+
           </div>
         </div>
         
@@ -79,17 +95,13 @@
 
 <% if @collection.any? %>
   <table class="index" id="listing_products">
-    <colgroup>
-       <col style="width: 15%;">
-       <col style="width: 10%;">
-       <col style="width: 48%;">
-       <col style="width: 10%;">
-       <col style="width: 17%;">
-    </colgroup>
     <thead>
       <tr data-hook="admin_products_index_headers">
         <th><%= t(:sku) %></th>
         <th colspan="2"><%= sort_link @search,:name, t(:name), { :default_order => "desc" }, {:title => 'admin_products_listing_name_title'} %></th>
+        <th><%= t(:factory) %></th>
+        <th><%= t(:fabric) %></th>
+        <th><%= t(:size_chart) %></th>
         <th><%= sort_link @search,:master_default_price_amount, t(:master_price), {}, {:title => 'admin_products_listing_price_title'} %></th>
         <th data-hook="admin_products_index_header_actions" class="actions"></th>
       </tr>  
@@ -100,6 +112,9 @@
             <td class="align-center"><%= product.sku rescue '' %></td>
             <td class="align-center"><%= product_image(product) %></td>
             <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
+            <td><%= product.factory || '-' %></td>
+            <td><%= fc = product.fabric_card; link_to(fc.name, [:admin, fc]) if fc %></td>
+            <td><%= product.size_chart %></td>
             <td class="align-center"><%= product.display_price rescue '' %></td>
             <td class="actions" data-hook="admin_products_index_row_actions">
               <%= link_to_edit product, :no_text => true, :class => 'edit' unless product.deleted? %>
