[hmmm] Hack the birthday fast making promotion

--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -30,8 +30,10 @@ table.line_items
           td = maybe_date(order.completed_at)
           td = maybe_date(line_item.projected_delivery_date)
           td style="text-align: center"
-            - if line_item.fast_making? 
-              h3 style="color: red;" = '!'
+            - if line_item.fast_making? || order.fast_making_promo?
+              h3 style="color: red;" !
+            - if order.fast_making_promo?
+              h3 🎂
           td
             - ship_state = ShippingStatePresenter.new(line_item)
             abbr title=ship_state.delivery_state class="state-#{ship_state.delivery_state}"
