add terms link to checkout

--- a/app/views/spree/checkout/_payment_step.html.slim
+++ b/app/views/spree/checkout/_payment_step.html.slim
@@ -12,8 +12,9 @@ h2.checkout-section-title Payment Details
 
   .form-group
     .row
-      p by making this purchase you are agreeing to the Fame & Partners
-      a href="/terms.html" Term of Service
+      p
+        |by making this purchase you are agreeing to the Fame &amp; Partners &nbsp; 
+        a href="/terms.html" Term of Service
       - if @credit_card_gateway
         .col-sm-4
           .btn-group-radio
